--- a/styles.css
+++ b/styles.css
@@ -309,7 +309,7 @@ input[type="radio"]{
         font-size: 14px;
     }
 
-    .row:nth-child(2), row:nth-child(4) {
+    .row:nth-child(2), .row:nth-child(4) {
         flex-direction: column-reverse;
     }
 
