--- a/styles.css
+++ b/styles.css
@@ -265,7 +265,7 @@ input[type="radio"]{
 /* media queries for smallscreens */
 
 
-@media only screen and  (max-width: 600px){
+@media only screen and  (max-width: 700px){
     .logo{
         width: 100px;
     }
@@ -288,6 +288,7 @@ input[type="radio"]{
         font-size: 25px;
         margin-left: 20px;
         margin-right: 20px;
+        line-height: 30px;
     }
 
     .email-signup button{
@@ -306,7 +307,7 @@ input[type="radio"]{
 
 
     .header{
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     .features h2{
         font-size: 20px;
