--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ nav button{
     transform: translate(-50%, -50%);
     text-align: center;
     margin-top: 100px;
+    margin-bottom: 50px;
 
 }
 .header-content h1{
