--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ nav button{
     align-items: center;
     margin-top: 30px;
     overflow: hidden;
+    margin-bottom: 30px;
 }
 
 .email-signup input{
